[gd_scene load_steps=3 format=3 uid="uid://bti088r13m3wu"]

[ext_resource type="FontFile" uid="uid://cs1xyqg7valt" path="res://Godot-Fontpack/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" id="1_4ul6u"]
[ext_resource type="Script" path="res://START GAME.gd" id="1_kvhvj"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = 47.0
offset_right = 120.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="start game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4ul6u")
theme_override_font_sizes/font_size = 22
text = "START GAME"
script = ExtResource("1_kvhvj")

[node name="ref guide" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4ul6u")
theme_override_font_sizes/font_size = 22
text = "REFERENCE GUIDE"
script = ExtResource("1_kvhvj")

[node name="credits_info" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4ul6u")
theme_override_font_sizes/font_size = 22
text = "CREDITS"
script = ExtResource("1_kvhvj")

[node name="exit_game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_4ul6u")
theme_override_font_sizes/font_size = 22
text = "EXIT GAME"
script = ExtResource("1_kvhvj")

[connection signal="pressed" from="MarginContainer/VBoxContainer/start game" to="MarginContainer/VBoxContainer/start game" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ref guide" to="MarginContainer/VBoxContainer/start game" method="_on_ref_guide_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/credits_info" to="MarginContainer/VBoxContainer/start game" method="_on_credits_info_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exit_game" to="MarginContainer/VBoxContainer/start game" method="_on_exit_game_pressed"]
